# logitty

./: .gitignore  Makefile  README.md  logitty.c  meson.build  run.c  run.h  tui.c  tui.cc  ui.c  ui.h  utils.c  utils.h
etc/s6/config/: logitty.conf
etc/s6/logitty-log/: consumer-for  pipeline-name  run
etc/s6/logitty-srv/: producer-for  run
